# k1-camera-hwaccel

./: .dockerignore  .gitignore  .gitmodules  Build.mk  Dockerfile  README.md  TODO.md  build.sh  env.sh  xburst2.cmake
.github/workflows/: branch.yml
docker/: Dockerfile  readme.md
example/: CMakeLists.txt  syncframe.c
include/: camera_info.h  v4l2-jpegenc.h  v4l2.h
libsynchronous-frames/: CMakeLists.txt  README.md
libsynchronous-frames/example/: monoframe.c  osd_syncframe_client.cpp  reset_syncframe.c
libsynchronous-frames/include/: syncframe.h
libsynchronous-frames/syncframe/: CMakeLists.txt  syncframe.c
libsynchronous-frames/test/: CMakeLists.txt
libsynchronous-frames/v4l2/: CMakeLists.txt
libsynchronous-frames/v4l2enc/: CMakeLists.txt
scripts/: build_libjpeg.sh  build_libsynchronous-frames.sh  build_mjpg-streamer.sh
test/: test.c
v4l2/: v4l2.c
v4l2enc/: v4l2_jpegenc.c
